Improved about-me page and fixed resume-page padding on mobile.

--- a/src/app/features/about-page/about-page.component.scss
+++ b/src/app/features/about-page/about-page.component.scss
@@ -25,11 +25,16 @@
 } */
 
 ::ng-deep markdown {
+	background: none;
+	padding: 0;
 	border-radius: 5px;
+	display: grid;
+	gap: 1rem;
 
-	img {
+	img, video {
 		border-radius: 5px;
-		margin-bottom: 1rem;
+		margin: 0 1rem 1rem 0;
+		float: left;
 
 		@media (max-width: 600px) {
 			display: block;
@@ -37,5 +42,12 @@
 			margin-right: auto !important;
 			margin-bottom: 1rem !important;
 		}
+	}
+
+	& > div {
+		background: #5f6b6b;
+		padding: 1rem 2rem 0.5rem 2rem;
+		border-radius: 5px;
+		width: 100%;
 	}
 }
