--- a/src/app/features/resume-page/resume-page.component.scss
+++ b/src/app/features/resume-page/resume-page.component.scss
@@ -138,7 +138,7 @@ a:hover {
 		}
 
 		@media (max-width: 799px) {
-			padding: 1rem;
+			//padding: 1rem;
 		}
 	
 		p {
